--- a/app/src/main/res/layout/chosen_rodent.xml
+++ b/app/src/main/res/layout/chosen_rodent.xml
@@ -52,13 +52,14 @@
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/editTextEditDate"
+        <TextView
+            android:id="@+id/textViewDate"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:ems="10"
-            android:hint="Data urodzenia"
-            android:inputType="date" />
+            android:layout_margin="8dp"
+            android:text="Data urodzenia ⌄"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/editTextEditFur"
@@ -89,5 +90,6 @@
             android:layout_height="wrap_content"
             android:onClick="viewRodents"
             android:text="Wyswietlll" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
