--- a/app/src/main/res/layout/activity_view_vets.xml
+++ b/app/src/main/res/layout/activity_view_vets.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewVets">
+    tools:context=".MainViews.ViewVets">
 
     <Button
         android:id="@+id/buttonAddVets"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="#147EC5"
         android:onClick="addNewVet"
         android:text="+"
         android:textSize="20sp"
-        android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
