Convert from classic SQLite to ROOM Database

--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -26,7 +26,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/editTextListName"
+        android:id="@+id/textViewName_rodent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
@@ -45,7 +45,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/editTextListAddress"
+        android:id="@+id/textViewGender_rodent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="brak"
@@ -62,7 +62,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewListDate"
+        android:id="@+id/textViewDate_rodent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="brak"
@@ -79,7 +79,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/editTextListPhone"
+        android:id="@+id/textViewFur_rodent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="brak"
@@ -96,7 +96,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/editTextListNotes"
+        android:id="@+id/textViewNotes_rodent"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="brak"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/buttonListEdit"
+            android:id="@+id/buttonEdit_rodent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -118,7 +118,7 @@
             android:text="Edytuj" />
 
         <Button
-            android:id="@+id/buttonListDelete"
+            android:id="@+id/buttonDelete_rodent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
