--- a/app/src/main/res/layout/add_rodent.xml
+++ b/app/src/main/res/layout/add_rodent.xml
@@ -85,11 +85,27 @@
             android:text="Zapisz" />
 
         <Button
-            android:id="@+id/buttonEditView"
+            android:id="@+id/buttonView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="viewRodents"
             android:text="Wyswietlll" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+        <TextView
+            android:id="@+id/textViewDate_hidden"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:text="data"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:visibility="gone" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
