--- a/app/src/main/res/layout/activity_rodent_edit.xml
+++ b/app/src/main/res/layout/activity_rodent_edit.xml
@@ -82,7 +82,7 @@
                 android:hint="Notatki..." />
 
             <Button
-                android:id="@+id/buttonEditSaveRodent"
+                android:id="@+id/buttonAdd_rodent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="editRodent"
