--- a/app/src/main/res/layout/vets_item_list.xml
+++ b/app/src/main/res/layout/vets_item_list.xml
@@ -20,7 +20,7 @@
         android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/editTextListName"
+        android:id="@+id/editTextName_vet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -41,7 +41,7 @@
         android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/editTextListAddress"
+        android:id="@+id/editTextAddress_vet"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -65,7 +65,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/editTextListPhone"
+            android:id="@+id/editTextPhone_vet"
             android:layout_marginLeft="10dp"
             android:layout_width="305dp"
             android:layout_height="50dp"
@@ -96,7 +96,7 @@
         android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/editTextListNotes"
+        android:id="@+id/editTextNotes_vet"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -119,7 +119,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonEdit_rodent"
+            android:id="@+id/buttonEdit_vet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
@@ -127,7 +127,7 @@
             android:text="Edytuj" />
 
         <Button
-            android:id="@+id/buttonListAdd"
+            android:id="@+id/buttonAdd_vet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
